--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,6 @@
     "name": "setasign/seta-pdf-signer-addon-global-sign-dss",
     "description": "A SetaPDF-Signer component signature module for the GlobalSign Digital Signing Service.",
     "type": "library",
-    "require": {
-        "php": "^7.1 || ^8.0",
-        "guzzlehttp/guzzle": "^6.0",
-        "setasign/setapdf-signer": "^2.31"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^7.0"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -17,12 +9,21 @@
             "email": "jan.slabon@setasign.com"
         }
     ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://www.setasign.com/downloads/"
-        }
-    ],
+    "require": {
+        "php": "^7.1 || ^8.0",
+        "ext-json": "*",
+        "psr/http-client": "^1.0",
+        "psr/http-factory": "^1.0",
+        "setasign/setapdf-signer": "^2.31"
+    },
+    "require-dev": {
+        "ext-openssl": "*",
+        "phpunit/phpunit": "^7.0",
+        "guzzlehttp/guzzle": "^6.5",
+        "http-interop/http-factory-guzzle": "^1.0",
+        "mjelamanov/psr18-guzzle": "^1.3"
+    },
+
     "autoload": {
         "psr-4": {
             "setasign\\SetaPDF\\Signer\\Module\\GlobalSign\\Dss\\": "src/"
@@ -32,5 +33,12 @@
         "psr-4": {
             "setasign\\SetaPDF\\Signer\\Module\\GlobalSign\\Dss\\tests\\": "tests/"
         }
-    }
+    },
+
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://www.setasign.com/downloads/"
+        }
+    ]
 }
